vpc.tf
resource "aws_vpc" "studocu-vpc" {

  cidr_block           = "10.200.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name = "studocu-vpc"
  }
}

resource "aws_internet_gateway" "studocu-igw" {

  vpc_id = aws_vpc.studocu-vpc.id

  tags = {
    Name = "studocu-igw"

  }
}
